WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57048
http/tests/websocket/tests/workers/worker-handshake-challenge-randomness.html crashed once on Windows XP Debug (Tests)
https://bugs.webkit.org/show_bug.cgi?id=57048
Summary
http/tests/websocket/tests/workers/worker-handshake-challenge-randomness.html...
Adam Roben (:aroben)
Reported
2011-03-24 13:12:16 PDT
http/tests/websocket/tests/workers/worker-handshake-challenge-randomness.html crashed once on Windows XP Debug (Tests). See the URL for the crash log. It looks like the same CFSocket is being modified on multiple threads concurrently.
Attachments
Patch
(1.78 KB, patch)
2011-05-18 19:14 PDT
,
Fumitoshi Ukai
no flags
Details
Formatted Diff
Diff
Patch
(1.78 KB, patch)
2011-05-18 19:21 PDT
,
Fumitoshi Ukai
ap
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-03-24 13:13:06 PDT
Seems related to
bug 56625
.
Adam Roben (:aroben)
Comment 2
2011-03-24 13:14:52 PDT
<
rdar://problem/9183661
>
David Levin
Comment 3
2011-03-24 13:15:25 PDT
+ ukai due to websocket issue.
Adam Roben (:aroben)
Comment 4
2011-03-25 12:36:35 PDT
This test is now being skipped (see
bug 55579
).
Alexey Proskuryakov
Comment 5
2011-05-18 17:19:22 PDT
This is a fairly obvious object lifetime bug, and it's probably reasonably easy to fix, but I couldn't figure it out in the time I had for this so far.
Fumitoshi Ukai
Comment 6
2011-05-18 18:21:39 PDT
(In reply to
comment #5
)
> This is a fairly obvious object lifetime bug, and it's probably reasonably easy to fix, but I couldn't figure it out in the time I had for this so far.
I don't know much about CoreFoundation, but it seems it schedules read/write stream on loaderRunLoop() on PLATFORM(WIN) in scheduleStreams(), but it tries to unschedule stream on CFRunLoopGetCurrent(), which is used in scheduling stream on other platform than WIN. So, I think this can be fixed to use loaderRunLoop() on PLATFORM(WIN) in platformClose(). I'll create a patch.
Fumitoshi Ukai
Comment 7
2011-05-18 19:14:28 PDT
Created
attachment 94029
[details]
Patch
Fumitoshi Ukai
Comment 8
2011-05-18 19:21:32 PDT
Created
attachment 94030
[details]
Patch
Yuta Kitamura
Comment 9
2011-05-18 20:01:02 PDT
Comment on
attachment 94030
[details]
Patch Looks good to me. (I'm not a reviewer, so I can't r+ this.)
Alexey Proskuryakov
Comment 10
2011-05-18 23:18:02 PDT
Comment on
attachment 94030
[details]
Patch Heh, this is a good catch! I'm not sure if it takes care of the whole problem - do you have a Windows setup to run the tests?
Alexey Proskuryakov
Comment 11
2011-05-18 23:23:06 PDT
Comment on
attachment 94030
[details]
Patch I'm going to say r+, since this is clearly an improvement, but the bug may need to remain open until someone can test on Windows, and until the skipped tests are re-enabled. See also: <
http://trac.webkit.org/changeset/81111
> (where I unsuccessfully tried to fix the crashes).
Fumitoshi Ukai
Comment 12
2011-05-18 23:40:31 PDT
Committed
r86822
: <
http://trac.webkit.org/changeset/86822
>
Fumitoshi Ukai
Comment 13
2011-05-18 23:43:20 PDT
I just landed the patch (id=94030). I don't have windows, so please someone test whether it fixes problems. I leave this bug open for now.
Brent Fulgham
Comment 14
2016-05-18 21:14:13 PDT
This code was landed five years ago. I think we can close it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug