2011-05-18  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Alexey Proskuryakov.

        http/tests/websocket/tests/workers/worker-handshake-challenge-randomness.html crashed once on Windows XP Debug (Tests)
        https://bugs.webkit.org/show_bug.cgi?id=57048

        * platform/network/cf/SocketStreamHandleCFNet.cpp:
        (WebCore::SocketStreamHandle::platformClose): use loaderRunLoop to schedule streams on platform WIN

Canonical link: https://commits.webkit.org/76464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86822 268f45cc-cd09-0410-ab3c-d52691b4dbfc